# eligo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  justfile
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
crates/eligo/: Cargo.toml
crates/eligo-cli/: Cargo.toml
crates/eligo-cli/src/: main.rs
crates/eligo/src/: backend.rs  clip.rs  config.rs  error.rs  lib.rs  math.rs  mock.rs  pipeline.rs  quality.rs  scorer.rs  sd.rs
crates/eligo/tests/: clip_real.rs  sd_real.rs
crates/lodestar/: Cargo.toml
crates/lodestar-cli/: Cargo.toml
crates/lodestar-cli/src/: main.rs
crates/lodestar/src/: backend.rs  candidate.rs  error.rs  lib.rs  math.rs  quality.rs  scorer.rs  sd.rs
crates/lodestar/tests/: clip_real.rs  sd_real.rs
docs/: ROADMAP.md  banner.html  medium-article.html  medium-article.md
scripts/: release.sh
