[workspace]
resolver = "3"
members = [
    "crates/eligo",
    "crates/eligo-cli",
]

[workspace.package]
edition = "2024"
rust-version = "1.85.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vbasky/eligo"
authors = ["Vikram Bhaskaran <vikram.bhaskaran@outlook.com>"]

[workspace.lints.rust]
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_extern_crates = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
# Starts strict (clippy defaults + -D warnings in CI). Relax pedantic lints
# per-project here, each with an inline comment explaining why — e.g.:
#   cast_possible_truncation = "allow"  # pervasive intentional casts in parsers

[profile.release]
lto = "thin"
codegen-units = 1

[workspace.dependencies]
# Internal crates
eligo = { path = "crates/eligo", version = "0.1.5" }

# Common third-party — trim to what you actually use.
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
