[package]
name = "eligo-cli"
version = "0.1.1"
description = "Command-line interface for eligo."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# The binary is named after the project (not `-cli`), so `eligo ...`
# is the command users run. CI archives this binary by repository name.
[[bin]]
name = "eligo"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Enable the CLIP scorer (--clip-model / --clip-tokenizer). Pulls the ONNX
# stack in via the library's `clip` feature.
clip = ["eligo/clip"]
# Enable the Stable Diffusion backend (--sd-model-dir / --sd-tokenizer).
sd = ["eligo/sd"]

[dependencies]
eligo = { workspace = true }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
