[package]
name = "eligo"
version = "0.1.2"
description = "Best-of-N image generation that selects the best candidate by measurable reward."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[features]
# The real CLIP reward (M1). Off by default so the base build needs no model
# weights and no native ONNX Runtime — only the deterministic mock loop.
clip = ["dep:ort", "dep:ndarray", "dep:image", "dep:tokenizers"]
# The Stable Diffusion backend (M2). Same ONNX stack as `clip`, no new deps.
sd = ["dep:ort", "dep:ndarray", "dep:image", "dep:tokenizers"]

[dependencies]
thiserror.workspace = true

# CLIP scorer (feature = "clip") — versions match the ecosystem's ONNX stack.
ort = { version = "2.0.0-rc.12", optional = true, features = ["ndarray"] }
ndarray = { version = "0.17", optional = true }
image = { version = "0.25", optional = true }
tokenizers = { version = "0.23", optional = true }
