[package]
name = "lodestar-cli"
version = "0.1.0"
description = "Command-line interface for lodestar."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# The binary is named after the project (not `-cli`), so `lodestar ...`
# is the command users run. CI archives this binary by repository name.
[[bin]]
name = "lodestar"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Enable the CLIP scorer (--clip-model / --clip-tokenizer). Pulls the ONNX
# stack in via the library's `clip` feature.
clip = ["lodestar/clip"]

[dependencies]
lodestar = { workspace = true }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
