[package]
name = "lodestar"
version = "0.1.0"
description = "Best-of-N image generation that selects the best candidate by measurable reward."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
